# spimex_api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  run.sh
src/: main.py
src/api/: routers.py
src/cache/: redis_client.py
src/core/: config.py
src/databases/: db.py
src/dependencies/: deps.py
src/middlewares/: redis_mw.py
src/middlwares/: redis_mw.py
src/migrations/: env.py
src/migrations/versions/: 3a665c4d7949_initial.py  46a5f8d9e7a8_ini_docker.py  c17793209f01_initial.py
src/models/: base.py  spimex.py
src/repositories/: base.py  sql_repository.py
src/schemas/: spimex.py
src/tests/: conftest.py
src/tests/unittests/: conftest.py  test_api.py  test_repo.py
src/utils/: redis.py
src/utils/cache/cache/: redis_client.py
